force-app/main/default/objects/Employee__c/fields/Total_Off_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Off_Days__c</fullName>
    <label>Total Off Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>