force-app/main/default/objects/Employee__c/fields/Working_Subfield__c.field-meta.xml
<CustomField>
    <fullName>Working_Subfield__c</fullName>
    <label>Working Subfield</label>
    <length>100</length>
    <type>Text</type>
</CustomField>