force-app/main/default/objects/Employee__c/fields/Year_Experience_Here__c.field-meta.xml
<CustomField>
    <fullName>Year_Experience_Here__c</fullName>
    <label>Year Experience Here</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>