force-app/main/default/objects/Employee__c/validationRules/If_Currently_working_is_false.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Currently_working_is_false</fullName>
    <active>true</active>
    <errorConditionFormula>Currently_Working__c = false
&amp;&amp;
  ISBLANK( Contract_End_Date__c )</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>If Currently working is false, then it is mandatory 
to fill in</errorMessage>
</ValidationRule>