force-app/main/default/objects/Employee__c/validationRules/If_working_facility.validationRule-meta.xml
<ValidationRule>
    <fullName>If_working_facility</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Working_Field__c, &apos;Facilities&apos;) &amp;&amp;
 ISBLANK( Working_Subfield__c )</errorConditionFormula>
    <errorDisplayField>Working_Subfield__c</errorDisplayField>
    <errorMessage>If the working field is &apos;Facility&apos;, this field should be 
entered</errorMessage>
</ValidationRule>